--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,10 +56,14 @@ dependencies {
     implementation 'android.arch.persistence.room:runtime:1.1.1'
     kapt 'android.arch.persistence.room:compiler:1.1.1'
 
+    testImplementation "android.arch.core:core-testing:2.18.3"
     testImplementation "org.mockito:mockito-core:2.27.0"
-    testImplementation "android.arch.core:core-testing:2.1.0"
-    androidTestImplementation "org.mockito:mockito-core:2.27.0"
+    androidTestImplementation 'org.mockito:mockito-android:2.27.0'
+    testImplementation "org.mockito:mockito-inline:2.13.0"
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:2.0'
+
+
+
 }
